a table to represents circuit wins over the years of a driver

--- a/F1.ipynb
+++ b/F1.ipynb
@@ -1580,6 +1580,81 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Same as above, different representation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                           | 07 | 08C| 09 | 10 | 11 | 12 | 13 | 14C| 15C| 16 | 17C| 18C  (C=champion)\n",
+      "Abu Dhabi Grand Prix:      |    |    |    |    | *  |    |    | *  |    | *  |    | *  \n",
+      "Australian Grand Prix:     |    | *  |    |    |    |    |    |    | *  |    |    |    \n",
+      "Austrian Grand Prix:       |    |    |    |    |    |    |    |    |    | *  |    |    \n",
+      "Azerbaijan Grand Prix:     |    |    |    |    |    |    |    |    |    |    |    | *  \n",
+      "Bahrain Grand Prix:        |    |    |    |    |    |    |    | *  | *  |    |    |    \n",
+      "Belgian Grand Prix:        |    |    |    | *  |    |    |    |    | *  |    | *  |    \n",
+      "Brazilian Grand Prix:      |    |    |    |    |    |    |    |    |    | *  |    | *  \n",
+      "British Grand Prix:        |    | *  |    |    |    |    |    | *  | *  | *  | *  |    \n",
+      "Canadian Grand Prix:       | *  |    |    | *  |    | *  |    |    | *  | *  | *  |    \n",
+      "Chinese Grand Prix:        |    | *  |    |    | *  |    |    | *  | *  |    | *  |    \n",
+      "French Grand Prix:         |    |    |    |    |    |    |    |    |    |    |    | *  \n",
+      "German Grand Prix:         |    | *  |    |    | *  |    |    |    |    | *  |    | *  \n",
+      "Hungarian Grand Prix:      | *  |    | *  |    |    | *  | *  |    |    | *  |    | *  \n",
+      "Italian Grand Prix:        |    |    |    |    |    | *  |    | *  | *  |    | *  | *  \n",
+      "Japanese Grand Prix:       | *  |    |    |    |    |    |    | *  | *  |    | *  | *  \n",
+      "Malaysian Grand Prix:      |    |    |    |    |    |    |    | *  |    |    |    |    \n",
+      "Mexican Grand Prix:        |    |    |    |    |    |    |    |    |    | *  |    |    \n",
+      "Monaco Grand Prix:         |    | *  |    |    |    |    |    |    |    | *  |    |    \n",
+      "Russian Grand Prix:        |    |    |    |    |    |    |    | *  | *  |    |    | *  \n",
+      "Singapore Grand Prix:      |    |    | *  |    |    |    |    | *  |    |    | *  | *  \n",
+      "Spanish Grand Prix:        |    |    |    |    |    |    |    | *  |    |    | *  | *  \n",
+      "Turkish Grand Prix:        |    |    |    | *  |    |    |    |    |    |    |    |    \n",
+      "United States Grand Prix:  | *  |    |    |    |    | *  |    | *  | *  | *  | *  |    \n"
+     ]
+    }
+   ],
+   "source": [
+    "driverRef = 'hamilton'\n",
+    "winning_races = br[(br['position'] == '1') & (br['driverRef'] == driverRef)]\n",
+    "winning_years = {}\n",
+    "for index, race in winning_races.iterrows():\n",
+    "    r = ''\n",
+    "    try:\n",
+    "        if champs[race['year']] == driverRef:\n",
+    "            r = str(race['year']) + 'C'\n",
+    "        else:\n",
+    "            r = str(race['year']) + ' '\n",
+    "    except KeyError:\n",
+    "        continue\n",
+    "    try:\n",
+    "        winning_years[race['circuitName']].append(r)\n",
+    "    except KeyError:\n",
+    "        winning_years[race['circuitName']] = [r]\n",
+    "from more_itertools import flatten\n",
+    "years = sorted(set(flatten(winning_years.values())))\n",
+    "print('{} | {}  (C=champion)'.format(26*' ', '| '.join([y[2:] for y in years])))\n",
+    "sorted_keys = sorted(winning_years) #, key=lambda k: len(winning_years[k]), reverse=True)\n",
+    "for race in sorted_keys:\n",
+    "    padding = 26 - len(race)\n",
+    "    s = '{}:{}'.format(race, ' '*padding)\n",
+    "    for y in years:\n",
+    "        if y in winning_years[race]:\n",
+    "            s += '| *  '\n",
+    "        else:\n",
+    "            s += '|    '    \n",
+    "    print(s)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
