include current(unfinished) season in results

--- a/F1.ipynb
+++ b/F1.ipynb
@@ -1062,16 +1062,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- dnf percentage per driver\n",
-    "- plot of qualifing laptimes per cicuit through the years, anotaded with rule changes\n",
-    "  (v12, v8, v6, drs, kers, double diffuser introduction/banning)\n",
-    "- rank drivers on dominance, measuring outqualifing team mate, positons gained in race, if won by how much time, point scoring streaks, lap records, \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Dnf percentage per driver"
    ]
   },
@@ -1588,37 +1578,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                           | 07 | 08C| 09 | 10 | 11 | 12 | 13 | 14C| 15C| 16 | 17C| 18C  (C=champion)\n",
-      "Abu Dhabi Grand Prix:      |    |    |    |    | *  |    |    | *  |    | *  |    | *  \n",
-      "Australian Grand Prix:     |    | *  |    |    |    |    |    |    | *  |    |    |    \n",
-      "Austrian Grand Prix:       |    |    |    |    |    |    |    |    |    | *  |    |    \n",
-      "Azerbaijan Grand Prix:     |    |    |    |    |    |    |    |    |    |    |    | *  \n",
-      "Bahrain Grand Prix:        |    |    |    |    |    |    |    | *  | *  |    |    |    \n",
-      "Belgian Grand Prix:        |    |    |    | *  |    |    |    |    | *  |    | *  |    \n",
-      "Brazilian Grand Prix:      |    |    |    |    |    |    |    |    |    | *  |    | *  \n",
-      "British Grand Prix:        |    | *  |    |    |    |    |    | *  | *  | *  | *  |    \n",
-      "Canadian Grand Prix:       | *  |    |    | *  |    | *  |    |    | *  | *  | *  |    \n",
-      "Chinese Grand Prix:        |    | *  |    |    | *  |    |    | *  | *  |    | *  |    \n",
-      "French Grand Prix:         |    |    |    |    |    |    |    |    |    |    |    | *  \n",
-      "German Grand Prix:         |    | *  |    |    | *  |    |    |    |    | *  |    | *  \n",
-      "Hungarian Grand Prix:      | *  |    | *  |    |    | *  | *  |    |    | *  |    | *  \n",
-      "Italian Grand Prix:        |    |    |    |    |    | *  |    | *  | *  |    | *  | *  \n",
-      "Japanese Grand Prix:       | *  |    |    |    |    |    |    | *  | *  |    | *  | *  \n",
-      "Malaysian Grand Prix:      |    |    |    |    |    |    |    | *  |    |    |    |    \n",
-      "Mexican Grand Prix:        |    |    |    |    |    |    |    |    |    | *  |    |    \n",
-      "Monaco Grand Prix:         |    | *  |    |    |    |    |    |    |    | *  |    |    \n",
-      "Russian Grand Prix:        |    |    |    |    |    |    |    | *  | *  |    |    | *  \n",
-      "Singapore Grand Prix:      |    |    | *  |    |    |    |    | *  |    |    | *  | *  \n",
-      "Spanish Grand Prix:        |    |    |    |    |    |    |    | *  |    |    | *  | *  \n",
-      "Turkish Grand Prix:        |    |    |    | *  |    |    |    |    |    |    |    |    \n",
-      "United States Grand Prix:  | *  |    |    |    |    | *  |    | *  | *  | *  | *  |    \n"
+      "                           | 07 | 08C| 09 | 10 | 11 | 12 | 13 | 14C| 15C| 16 | 17C| 18C| 19   (C=champion)\n",
+      "Abu Dhabi Grand Prix:      |    |    |    |    | *  |    |    | *  |    | *  |    | *  |    \n",
+      "Australian Grand Prix:     |    | *  |    |    |    |    |    |    | *  |    |    |    |    \n",
+      "Austrian Grand Prix:       |    |    |    |    |    |    |    |    |    | *  |    |    |    \n",
+      "Azerbaijan Grand Prix:     |    |    |    |    |    |    |    |    |    |    |    | *  |    \n",
+      "Bahrain Grand Prix:        |    |    |    |    |    |    |    | *  | *  |    |    |    | *  \n",
+      "Belgian Grand Prix:        |    |    |    | *  |    |    |    |    | *  |    | *  |    |    \n",
+      "Brazilian Grand Prix:      |    |    |    |    |    |    |    |    |    | *  |    | *  |    \n",
+      "British Grand Prix:        |    | *  |    |    |    |    |    | *  | *  | *  | *  |    | *  \n",
+      "Canadian Grand Prix:       | *  |    |    | *  |    | *  |    |    | *  | *  | *  |    | *  \n",
+      "Chinese Grand Prix:        |    | *  |    |    | *  |    |    | *  | *  |    | *  |    | *  \n",
+      "French Grand Prix:         |    |    |    |    |    |    |    |    |    |    |    | *  | *  \n",
+      "German Grand Prix:         |    | *  |    |    | *  |    |    |    |    | *  |    | *  |    \n",
+      "Hungarian Grand Prix:      | *  |    | *  |    |    | *  | *  |    |    | *  |    | *  | *  \n",
+      "Italian Grand Prix:        |    |    |    |    |    | *  |    | *  | *  |    | *  | *  |    \n",
+      "Japanese Grand Prix:       | *  |    |    |    |    |    |    | *  | *  |    | *  | *  |    \n",
+      "Malaysian Grand Prix:      |    |    |    |    |    |    |    | *  |    |    |    |    |    \n",
+      "Mexican Grand Prix:        |    |    |    |    |    |    |    |    |    | *  |    |    |    \n",
+      "Monaco Grand Prix:         |    | *  |    |    |    |    |    |    |    | *  |    |    | *  \n",
+      "Russian Grand Prix:        |    |    |    |    |    |    |    | *  | *  |    |    | *  | *  \n",
+      "Singapore Grand Prix:      |    |    | *  |    |    |    |    | *  |    |    | *  | *  |    \n",
+      "Spanish Grand Prix:        |    |    |    |    |    |    |    | *  |    |    | *  | *  | *  \n",
+      "Turkish Grand Prix:        |    |    |    | *  |    |    |    |    |    |    |    |    |    \n",
+      "United States Grand Prix:  | *  |    |    |    |    | *  |    | *  | *  | *  | *  |    |    \n"
      ]
     }
    ],
@@ -1634,7 +1624,7 @@
     "        else:\n",
     "            r = str(race['year']) + ' '\n",
     "    except KeyError:\n",
-    "        continue\n",
+    "        r = str(race['year']) + ' ' \n",
     "    try:\n",
     "        winning_years[race['circuitName']].append(r)\n",
     "    except KeyError:\n",
